--- a/src/app/components/modais/modal-weather/modal-weather.component.html
+++ b/src/app/components/modais/modal-weather/modal-weather.component.html
@@ -1,23 +1,29 @@
 <p-dialog [position]="'bottomright'" [showHeader]="false" [(visible)]="displayModal" styleClass="custom-p-dialog"
 [draggable]="false">
 <div class="row">
-    <div class="mt-4 mch-fs-17 col-12">
-        <label class="">Parece que vai chover ai em</label>
-    </div>
-    <div class="col-6">
-        <div class="location">
+    <div class="mt-2 mch-fs-17 d-flex justify-content-center col-12">
+        <div class="location d-flex justify-content-center">
             <label class="mch-fs-12 mch-color-grey2">
                 <span class="iconLocale pi pi-map-marker"></span>
-            </label><span class="mch-fs-17">{{dadosWeather?.name}}</span>
+            </label><span class="mr-2 mch-fs-15 w-full">{{'O Tempo agora em ' + dadosWeather?.name}}</span>
         </div>
-        <p class="temp">{{(dadosWeather?.main.temp | number: '1.0-0') + ' °C'}}</p>
     </div>
-    <div class="col-6 caixa-menor">
-        <img class="icone" src="https://openweathermap.org/img/wn/04n.png">
-        <label class="mch-fs-15">{{dadosWeather?.weather[0].description}}</label>
+    <div class="col-12 d-flex justify-content-center">
+
+        <label class="mt-4 mr-4 mch-fs-15">{{(dadosWeather?.main.temp | number: '1.0-0') + ' °C'}}</label>
+        <img class="icone " src="https://openweathermap.org/img/wn/04n.png">
+    </div>
+    <div class="col-6 ">
+        <!-- <label class="mch-fs-15">{{dadosWeather?.weather[0].description}}</label> -->
+        
+
     </div>
     <div class="col-12 text-center">
-        <p class="umidade">{{'Umidade: ' + dadosWeather?.main.humidity + '%'}}</p>
+        <p class="mch-fs-17 mch-color-grey2">
+            <span class="pulse"></span> {{dadosWeather?.weather[0].description}}
+        </p>
+        <!-- <p class="umidade">{{'Umidade: ' + dadosWeather?.main.humidity + '%'}}</p> -->
+
     </div>
 </div>
 </p-dialog>
