--- a/src/app/components/modais/modal-weather/modal-weather.component.html
+++ b/src/app/components/modais/modal-weather/modal-weather.component.html
@@ -1,29 +1,27 @@
-<p-dialog  [position]="'bottomright'" [showHeader]="false" [(visible)]="displayModal" styleClass="custom-p-dialog"
-[draggable]="false">
-<div class="row">
-    <div class="mt-2 mch-fs-17 d-flex justify-content-center col-12">
-        <div class="location d-flex justify-content-center">
-            <label class="mch-fs-12 mch-color-grey2">
-                <span class="iconLocale pi pi-map-marker"></span>
-            </label><span class="mr-2 mch-fs-15 w-full">{{'O Tempo agora em ' + dadosWeather?.name}}.</span>
+<p-dialog [position]="'bottomright'" [showHeader]="false" [(visible)]="displayModal" styleClass="custom-p-dialog"
+    [draggable]="false">
+    <div class="row">
+        <div class="mt-2 mch-fs-17 d-flex justify-content-center col-12">
+            <div class="location d-flex justify-content-center">
+                <label class="mr-2 mch-fs-12 mch-color-grey2">
+                    <span class="iconLocale pi pi-map-marker"></span>
+                </label><span class="title-weather mr-2 mch-fs-15 w-full">{{'O Tempo agora em ' + dadosWeather?.name}}.</span>
+            </div>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+
+            <label class="title-weather mt-3 mr-4 mch-fs-17">{{(dadosWeather?.main.temp | number: '1.0-0') + ' °C'}}</label>
+            <img class="cloud-weather" [src]="'https://openweathermap.org/img/wn/' + dadosWeather?.weather[0].icon + '.png'">
+        </div>
+        <div class="col-6 ">
+        </div>
+        <div class="col-12 text-center">
+            <label class="mch-fs-16 mch-color-grey2">
+                <span class="pulse-weather"></span> {{dadosWeather?.weather[0].description}}.<span
+                    [style]="simbolStyle">{{simbol}}</span> {{'Umidade: ' + dadosWeather?.main.humidity + '%'}}
+            </label>
+            <!-- <p class="umidade">{{'Umidade: ' + dadosWeather?.main.humidity + '%'}}</p> -->
+
         </div>
     </div>
-    <div class="col-12 d-flex justify-content-center">
-
-        <label class="mt-4 mr-4 mch-fs-17">{{(dadosWeather?.main.temp | number: '1.0-0') + ' °C'}}</label>
-        <img class="icone " src="https://openweathermap.org/img/wn/04n.png">
-    </div>
-    <div class="col-6 ">
-        <!-- <label class="mch-fs-15">{{dadosWeather?.weather[0].description}}</label> -->
-        
-
-    </div>
-    <div class="col-12 text-center">
-        <label class="mch-fs-16 mch-color-grey2">
-            <span class="pulse-weather"></span> {{dadosWeather?.weather[0].description}}.<span  [style]="simbolStyle" >{{simbol}}</span> {{'Umidade: ' + dadosWeather?.main.humidity + '%'}}
-        </label >
-        <!-- <p class="umidade">{{'Umidade: ' + dadosWeather?.main.humidity + '%'}}</p> -->
-
-    </div>
-</div>
 </p-dialog>
