--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,26 +18,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav options d-flex flex-column flex-md-row align-items-center">
                     <li *ngFor="let o of optionsMenu" class="opt-navbar nav-item">
-                        <a id="inicio" (mouseenter)="onMouseEnter($event)" [routerLink]="['/' + o.routerLink]"
-                            class="optMenu typeOpt" [routerLinkActive]="['linkSelect']" href="#">{{o.option}}</a>
+                        <a id="inicio" (mouseenter)="onMouseEnter($event, o)" #rla="routerLinkActive"
+                            [routerLink]="['/' + o.routerLink]"
+                            class="{{ rla.isActive ? 'typeOpt' : ' optMenu typeOpt'}}" routerLinkActive
+                            [routerLinkActive]="['linkSelect']" href="#">{{o.option}}</a>
+
                     </li>
                 </ul>
-                <div class=" ml-3 btn-navbar mt-4" [routerLink]="['/home']">Inicio</div>
-                <!-- <div *ngIf="seeMenu" (mouseleave)="onMouseOut()"
-                    class=" mch-color-white retanguloMenu hovered-element">
-                    <div *ngFor="let d of  optionsMenu2 " class="text-center optIn">
-
-                        <ul class="options">
-                            <li class=" opt-navbar">
-                                <div>
-                                    <h6>{{d.title}}</h6>
-                                    <label>{{d.description}}</label>
-                                </div>
-                            </li>
-                        </ul>
+                <div class="  ml-3 btn-navbar mt-4" [routerLink]="['/home']">Home</div>
+                <div *ngIf="seeMenu" (mouseleave)="onMouseOut()"
+                    class=" row mch-color-white retanguloMenu  flex-column d-flex text-left accompaniment">
+                    <div class="col-12 col-md-12">
+                        <div *ngFor=" let s of optionsSubMenu" [routerLink]="['/about']" class="panelElementMenu">
+                            <div class="menu-content">
+                                <label class="mch-fs-15 titleMenu">{{s.title}}</label>
+                                <label class="mch-fs-14 subtitleMenu mch-color-secundary">{{s.subtitle}}</label>
+                            </div>
+                        </div>
                     </div>
-
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
