--- a/src/assets/style/components/menu-header.scss
+++ b/src/assets/style/components/menu-header.scss
@@ -1,24 +1,93 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 @import url("https://fonts.googleapis.com/css?family=Aldrich");
 
-.retanguloMenu {
-    z-index: 1000;
-    border: 1px solid rgba(97, 97, 97, 0.5490196078);
-    border-radius: 3%;
-    width: 284px;
-    height: 280px;
-    position: fixed;
-    top: 23%;
-    left: 62%;
-    transform: translate(0, -50%);
-    background-color: #0c0c0c;
-    transition: 0.2s;
+.mobile {
+    display: block;
+    /* Oculta o elemento com essa classe em dispositivos móveis */
 }
 
-.opt-navbar:first-child a::first-letter {
-    margin-right: 5px;
-    /* Ajuste a margem conforme necessário */
+@media (max-width: 768px) {
+    .mobile {
+        display: none;
+        /* Exibe o elemento com essa classe quando a largura da tela for menor ou igual a 768px (ajuste o valor conforme necessário) */
+    }
 }
+
+
+.dp-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+
+
+.dp-menu ul li {
+    display: inline;
+    position: relative;
+}
+
+.dp-menu ul li a x {
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    transition: background .3s;
+}
+
+
+/* Submenu */
+.dp-menu ul ul {
+    z-index: 999;
+    width: 290px;
+    height: 235px;
+    top: 4vh;
+    left: 34px;
+    border: 1px solid rgba(97, 97, 97, 0.5490196078);
+    border-radius: 3%;
+    background-color: #000000;
+    transition: 0.2s;
+    display: none;
+    position: absolute;
+
+}
+
+.dp-menu ul ul:before {
+    content: "";
+    display: block;
+    height: 20px;
+    position: absolute;
+    top: -20px;
+    width: 100%;
+}
+
+.dp-menu ul li:hover>ul {
+    display: block;
+}
+
+
+.dp-menu ul ul li a {
+    display: block;
+}
+
+// painel de dentro do menu 
+
+.panelElementMenu {
+    cursor: pointer;
+    border-radius: 9px;
+    max-width: 100%;
+    width: 90%;
+    height: auto;
+    padding: 10px;
+    color: #fff;
+    margin-top: 10px;
+    margin-left: 13px;
+}
+
+.panelElementMenu:hover {
+    cursor: pointer;
+    background-color: #232323;
+}
+
 
 .titleMenu {
     color: white;
@@ -30,4 +99,8 @@
 .subtitleMenu {
     cursor: pointer;
 
+}
+
+.posiSubMenu {
+    position: absolute;
 }
