--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -18,64 +18,23 @@
                 <div class="col-md-4 col-12 ">
                     <p-button icon="pi pi-send" label="Me Acompanhe nas Redes" iconPos="right"></p-button>
                 </div>
-                <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
+                <!-- <div class="mt-4 mt-md-0 col-md-0 col-md-2 col-12">
                     <p-button label="Fotografia" styleClass="p-button-outlined"></p-button>
-                </div>
+                </div> -->
             </div>
-            
+
 
             <div class="mt-4 row">
-                <div class="col-12 mch-fs-22 titleDrops">Útimos Drops</div>
-                <div [routerLink]="['/projects']" class="panelElement mt-4 col-12 col-md-4">
+                <div class="col-12 mch-fs-18 titleDrops">ÚTIMOS DROPS</div>
+                <div *ngFor="let d of drops" [routerLink]="['/' + d.routerLink]"
+                    class="panelElement mt-4 col-12 col-md-4">
                     <div class="image-container">
-                        <img class="imgStacks" src="./assets/projects.jpg" alt="about">
+                        <img class="imgStacks" src="{{d.src}}" alt="about">
                         <div class="overlay">
-                            <label class="label">Projetos</label>
+                            <label class="label">{{d.name}}</label>
                         </div>
                     </div>
                 </div>
-                <div class="panelElement mt-4 col-12 col-md-4">
-                    <div class="image-container">
-                        <img class="imgStacks" src="./assets/stack.jpg" alt="about">
-                        <div class="overlay">
-                            <label class="label">Stack</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="panelElement mt-4 col-12 col-md-4">
-                    <div class="image-container">
-                        <img class="imgStacks" src="./assets/startup.jpg" alt="about">
-                        <div class="overlay">
-                            <label class="label">Fotografia</label>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- <div class="panelElement mt-4 col-12 col-md-6">
-                    <p-panel>
-                        <p>
-                            Pedro Machado da Silva
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo
-                        </p>
-                    </p-panel>
-                </div>
-                <div class="panelElement mt-4 col-12 col-md-6">
-                    <p-panel>
-                        <p>
-                            Pedro Machado da Silva
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo
-                        </p>
-                    </p-panel>
-                </div> -->
-
             </div>
         </div>
         <div class="mt-4">
@@ -83,4 +42,4 @@
         </div>
     </div>
 </div>
-<app-modal-weather [dadosWeather]="dadosWeather" [src]="src" #mWeather ></app-modal-weather>
+<app-modal-weather [dadosWeather]="dadosWeather" [src]="src" #mWeather></app-modal-weather>
