--- a/src/app/components/modais/modal-contato/modal-contato.component.html
+++ b/src/app/components/modais/modal-contato/modal-contato.component.html
@@ -49,4 +49,10 @@
         </div>
     
     </p-dialog>
+    <div class="overlayLoad" *ngIf="showOverlay">
+        <div class="col-2 col-md-12 text-center iconSpiner">
+            <i class="pi pi-spin pi-cog" style="font-size: 4rem"></i>
+        </div>
+    </div>
 </div>
+<p-toast position="top-right"></p-toast>
