--- a/src/assets/style/utills.scss
+++ b/src/assets/style/utills.scss
@@ -313,6 +313,25 @@ thumb {
   transition: opacity 7s ease-in-out;
 }
 
+.overlayLoad {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8); /* Cor de fundo branca com transparência */
+  z-index: 999; /* Garante que a sobreposição esteja na parte superior */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.iconSpiner {
+  color:#2f2f2f
+
+}
+
+
 
 
 
