--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,17 +18,22 @@
             <div class="dp-menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav options d-flex flex-column flex-md-row align-items-center">
                     <li *ngFor="let o of optionsMenu" class="opt-navbar nav-item">
-                        <a id="inicio" (mouseenter)="onMouseEnter($event, o)" #rla="routerLinkActive" [routerLink]="['/' + o.routerLink]"
+                        <a id="inicio" (mouseenter)="onMouseEnter($event, o)" #rla="routerLinkActive"
+                            [routerLink]="['/' + o.routerLink]"
                             class="{{ rla.isActive ? 'typeOpt' : ' optMenu typeOpt z'}}" routerLinkActive
                             [routerLinkActive]="['linkSelect']" href="#">{{o.option}}</a>
                         <ul *ngIf="seeMenu" class="ehMobile">
                             <li *ngFor="let s of optionsSubMenu"><a class="text-left x" href="#">
-                                <div  class="panelElementMenu">
-                                    <div class="menu-content">
-                                        <label class="mch-fs-13 titleMenu">{{s.title}}</label>
-                                        <label class="mch-fs-13 subtitleMenu mch-color-secundary">{{s.subtitle}}</label>
+                                <a [routerLink]="['/' + s.routerLink]">
+
+                                    <div  class="panelElementMenu">
+                                        <div class="menu-content">
+                                            <label class="mch-fs-13 titleMenu">{{s.title}}</label>
+                                            <label
+                                                class="mch-fs-13 subtitleMenu mch-color-secundary">{{s.subtitle}}</label>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                                 </a>
                             </li>
                         </ul>
@@ -36,17 +41,6 @@
                     </li>
                 </ul>
                 <div class="  ml-3 btn-navbar mt-4" [routerLink]="['/home']">Home</div>
-                <!-- <div *ngIf="seeMenu" (mouseleave)="onMouseOut()"
-                    class=" row mch-color-white retanguloMenu  flex-column d-flex text-left accompaniment">
-                    <div class="col-12 col-md-12">
-                        <div *ngFor=" let s of optionsSubMenu" [routerLink]="['/about']" class="panelElementMenu">
-                            <div class="menu-content">
-                                <label class="mch-fs-15 titleMenu">{{s.title}}</label>
-                                <label class="mch-fs-14 subtitleMenu mch-color-secundary">{{s.subtitle}}</label>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
