--- a/src/app/pages/modulos/home/home.component.html
+++ b/src/app/pages/modulos/home/home.component.html
@@ -26,7 +26,7 @@
 
             <div class="mt-4 row">
                 <div class="col-12 mch-fs-18 titleDrops">ÚTIMOS DROPS</div>
-                <div *ngFor="let d of drops" [routerLink]="['/' + d.routerLink]"
+                <div *ngFor="let d of drops" [routerLink]="d.routerLink ? ['/' + d.routerLink] : null"
                     class="panelElement mt-4 col-12 col-md-4">
                     <div class="image-container">
                         <img class="imgStacks" src="{{d.src}}" alt="about">
