--- a/src/assets/style/pages/projects.scss
+++ b/src/assets/style/pages/projects.scss
@@ -1,6 +1,50 @@
 .imgProject {
+    TOP: 13PX;
+    position: relative;
     max-width: 100%;
-    width: 100%;
-    height: 200px; /* Defina a altura desejada para fazer a imagem retangular */
-    object-fit: cover; /* Esta propriedade irá cortar a imagem para ajustá-la à altura especificada */
+    height: 213PX;
+    object-fit: cover;
 }
+
+.panelProjectDesc {
+    transition: 0.1s;    z-index: 999;
+    width: 250px;
+    height: 200px;
+    border-radius: 3%;
+    background-color: #54545418;
+    transition: 0.2s;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    
+}
+
+.panelProjectDesc:hover {
+    transform: scale(1.02);
+    /* Aumenta o tamanho em 20% ao passar o mouse */
+    cursor: pointer;
+}
+
+.iconGit {
+    cursor: pointer;
+    // margin-right: 20px;
+    color: #d3d3d3;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 13px;
+    transition: .1s;
+}
+
+.iconGit:hover {
+    color: #666666;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.divider {
+    border: none;
+    border-top: 2px solid #333; /* Cor e largura da linha */
+    margin: 20px 0; /* Espaçamento superior e inferior */
+  }
