--- a/src/app/pages/modulos/projects/projects.component.html
+++ b/src/app/pages/modulos/projects/projects.component.html
@@ -8,7 +8,7 @@
                 <div class=" mt-4 mt-md-0 col-12 col-md-12 mch-color-white">
                     <div class="row">
 
-                        <div class=" mt-1 mt-md-4 col-12 col-md-12 d-md-block">
+                        <div class=" mt-4 col-12 col-md-12 d-md-block">
                             <span class="p-input-icon-right w-full">
                                 <i class="pi pi-search"></i>
                                 <input type="text" class="w-full" pInputText
