--- a/src/app/pages/modulos/stacks/stacks.component.html
+++ b/src/app/pages/modulos/stacks/stacks.component.html
@@ -17,7 +17,7 @@
                             <span class="p-input-icon-right w-full">
                                 <i class="pi pi-search"></i>
                                 <input type="text" class="w-full" pInputText
-                                    placeholder="Pesquise o projeto desejado" />
+                                    placeholder="Pesquise o item desejado" />
                             </span>
                         </div>
                         <div class="row mt-0 mt-md-5 ">
@@ -45,6 +45,6 @@
             </div>
         </div>
 
-        <app-footer></app-footer>
     </div>
+    <app-footer></app-footer>
 </div>
