--- a/src/app/pages/modulos/projects/projects.component.html
+++ b/src/app/pages/modulos/projects/projects.component.html
@@ -15,50 +15,53 @@
                                     placeholder="Pesquise o projeto desejado" />
                             </span>
                         </div>
-                        <div class="row mt-5 ">
-                            <div class=" col-12 col-md-6">
-                                <div class="row">
-                                    <div class=" text-center panelProjectDesc mt-4 col-12">
-
-
-                                        <p class="mt-4">
-                                            profile web - Lucas Machado
-                                        </p>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt ut
-                                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                            exercitation
-                                            ullamco
-                                            laboris nisi ut aliquip ex ea commodo
-                                        </p>
+                        <div class="col-12">
+                            <div class="row mt-5 ">
+                                <div class=" col-12 col-md-6">
+                                    <div class="row">
+                                        <div class=" text-center panelProjectDesc mt-4 col-12">
+    
+    
+                                            <p class="mt-4">
+                                                profile web - Lucas Machado
+                                            </p>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                                tempor
+                                                incididunt ut
+                                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                                exercitation
+                                                ullamco
+                                                laboris nisi ut aliquip ex ea commodo
+                                            </p>
+                                        </div>
+                                        <div class="mt-2 col-6">
+                                            <span class="m-2 pi pi-github"></span>
+                                            <span class="m-2 pi pi-prime"></span>
+                                        </div>
+                                        <div class="mt-2 text-right col-12 col-md-6">
+                                            <label class="iconGit"><span class="m-2 pi pi-github"></span>
+                                                Acessar Projeto >
+                                            </label>
+                                        </div>
                                     </div>
-                                    <div class="mt-2 col-6">
-                                        <span class="m-2 pi pi-github"></span>
-                                        <span class="m-2 pi pi-prime"></span>
-                                    </div>
-                                    <div class="mt-2 text-right col-12 col-md-6">
-                                        <label class="iconGit"><span class="m-2 pi pi-github"></span>
-                                            Acessar Projeto >
-                                        </label>
-                                    </div>
+    
+    
+    
                                 </div>
-
-
-
-                            </div>
-                            <div class="mb-5 d-flex justify-content-center col-12 col-md-6 mch-color-white imgProject">
-                                <img class="imgProject" src="./assets/mac-project.png" alt="profile">
+                                <div class="mb-5 text-center d-flex justify-content-center col-12 col-md-6 mch-color-white imgProject">
+                                    <img class="imgProject" src="./assets/mac-project.png" alt="profile">
+                                </div>
                             </div>
                         </div>
+
 
                         <div class="mt-4 col-12 content">
                             <hr class="divider">
                           </div>
 
 
-                        <div class="row mt-5 ">
+                        <!-- <div class="row mt-5 ">
                             <div class="mb-5 d-flex justify-content-center col-12 col-md-6 mch-color-white imgProject">
                                 <img class="imgProject" src="./assets/mac-project.png" alt="profile">
                             </div>
@@ -95,7 +98,7 @@
 
                             </div>
 
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
